# Bitonic_Sort

./: CMakeLists.txt  README.md  conanfile.txt  main.cpp  test_gen.cpp
OnCPU/: CMakeLists.txt  example  example.cpp  log.txt  main.cpp
OnCPU/include/: bitonic_sort.h
OnCPU/unit_tests/: CMakeLists.txt
OnCPU/unit_tests/test_utils/include/: test_utils.h  test_utils_detail.h
OnGPU/: CMakeLists.txt  main.cpp
OnGPU/include/: bitonic_sort.h
OnGPU/kernels/: bitonic_sort.cl
OnGPU/unit_tests/: CMakeLists.txt
OnGPU/unit_tests/test_utils/include/: test_utils_detail.h
include/: bitonic_sort.h
kernels/: bitonic_sort.cl
unit_tests/: CMakeLists.txt
unit_tests/data/bd_tests/: uniform_100000.ans  uniform_500000.ans
unit_tests/data/common/: uniform_1000.ans  uniform_10000.ans  uniform_1500.ans  uniform_15000.ans
unit_tests/src/: unit_tests.cpp
unit_tests/test_utils/include/: test_utils.h  test_utils_detail.h
utils/include/: log.h  utils.h
